--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.9,<3.12"
 dependencies = [
     "PyYAML~=6.0",
     "PySide6~=6.8",
+    "obsws-python (>=1.8.0,<2.0.0)",
 ]
 
 [project.optional-dependencies]
