Remove OBS ReplayMod adapter and related configuration files

--- a/src/trivox_conductor/profiles.yml
+++ b/src/trivox_conductor/profiles.yml
@@ -1,6 +1,6 @@
 profiles:
   minecraft_obs_replay:
-    label: "Minecraft (OBS + ReplayMod)"
+    label: "Minecraft (OBS)"
 
     adapters:
       capture:
