Refactor and implement Watcher module: add WatcherCommand, WatcherService, and related components; enhance configuration and session correlation logic; remove Replay module and its dependencies.

--- a/src/trivox_conductor/profiles.yml
+++ b/src/trivox_conductor/profiles.yml
@@ -25,3 +25,7 @@ profiles:
             required: false
             params:
               window_title_contains: "Minecraft"
+      watcher:
+        name: "replaywatcheradapter"
+        overrides:
+          watch_path: "C:/Users/USUARIO/Videos"
