Enhance Trivox Conductor with observer pattern and manifest management
- Added observer pattern implementation with ManifestObserver and NotificationObserver to handle events.
- Introduced ManifestService for session management and event logging.
- Integrated observer loading in the application initialization process.
- Updated CaptureCommandProcessor to manage session IDs and observer contexts.
- Enhanced CaptureService to publish events on capture start and stop.
- Implemented auto-launch functionality for OBS in the capture_obs plugin.
- Added configuration options for desktop and mic audio capture in CaptureSettingsModel.
- Updated profiles.yml to include hooks for notifications and watcher auto-start.
- Created pipelines.yml for defining processing stages in the capture workflow.

--- a/src/trivox_conductor/profiles.yml
+++ b/src/trivox_conductor/profiles.yml
@@ -11,7 +11,16 @@ profiles:
           enforce_mc_foreground: true
           record_dir: "C:/Users/USUARIO/Videos"
 
+          auto_launch_obs: true
+          obs_launch_wait_sec: 15.0
+          
+          capture_desktop_audio: true
+          capture_mic_audio: false 
+
         preflights:
+          - id: "capture.obs_launch"
+            required: true
+
           - id: "capture.disk_space"
             required: true
             params:
@@ -29,3 +38,14 @@ profiles:
         name: "replaywatcheradapter"
         overrides:
           watch_path: "C:/Users/USUARIO/Videos"
+
+    pipelines:
+      on_replay_detected: "ig_ready"
+      on_capture_stopped: "handoff"
+
+    hooks:
+      notify:
+        capture_started: true
+        capture_stopped: true
+      watcher:
+        start_on_capture_started: true
