Refactor logging and settings management, remove unused modules, and enhance dynamic loading
- Updated logging configuration path in spec_manager.py for better organization.
- Removed module_loader.py as it was no longer needed.
- Refactored setting_manager.py to improve path handling and ensure directory creation.
- Renamed base_observer.py to observer_base.py and updated imports accordingly.
- Removed unused observer modules: notifications.py, watcher_autostart.py, and base_observer.py.
- Introduced dynamic_loader with BaseLoader and DynamicLoader classes for improved module loading.
- Enhanced observer loading mechanism in loaders.py to streamline observer registration.
- Added NotificationObserver and WatcherAutoStartObserver classes to handle specific events.
- Updated constants to centralize configuration and improve maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "PyYAML~=6.0",
     "PySide6~=6.8",
     "obsws-python (>=1.8.0,<2.0.0)",
+    "toml (>=0.10.2,<0.11.0)",
 ]
 
 [project.optional-dependencies]
